css/obBase.css
/* ... */
.chatSearch input::-webkit-input-placeholder {
  font-size: 13px;
}

.chatSearchIcon {
  margin-left: -24px;
  margin-right: 10px;
  float: left;
  margin-top: 13px;
  cursor: pointer;
  font-size: 15px;
  opacity: .50;
  transition: opacity .25s cubic-bezier(0, 0, 0.2, 1);
}

.chatSearchIcon:hover {
  opacity: 1;
}

.chatSearchOut {
  padding-left: 10px;
  width: calc(100% - 10px);
  margin-left: 0;
  height: 25px;
  line-height: 25px;
}

div.chatSearchOut .chatSearchIcon {
  margin-left: unset;
  margin-right: unset;
}

.chatConversationContainer {
  width: calc(100% - 1px);
  height: 360px;
  bottom: 0;
  position: absolute;
  transition: bottom 0.35s ease;
  background-color: #2B2B2B;
}

.chatConversationContainerHide {
  bottom: -362px;
}

.chatMessagesLabel {
  float:left;
  color: white;
  font-size: 15px;
  height: 43px;
  line-height: 43px;
  padding-left: 10px;
  -webkit-user-select: none;
  cursor: default;
}

.chatConversationHeads {
  clear: both;
  border-top: solid 1px #363636;
  height: calc(100% - 45px); /* this will have to be changed if the search is unhidden*/
  overflow-y: auto;
  overflow-x: hidden;
}

.chatConversationHeadsCompressed {
  height: calc(100% - 405px);
  overflow-x: hidden;
  overflow-y: auto;
  transition: opacity .25s cubic-bezier(0, 0, 0.2, 1), height 1s cubic-bezier(0, 0, 0.2, 1);
  -webkit-filter: blur(.25px);
}

.chatConversationHeader {
    padding: 0;
    background-color: #565656;
    height: 45px;
    line-height: 45px;
    padding-left: 10px;
    color: #fff;
    border-top-left-radius: 4px;
    margin-left: 2px;
}

.chatConversationLabel {
  width: calc(100% - 115px);
  margin-right:5px;
  float:left;
  text-overflow: ellipsis;
  overflow: hidden;
}

.conversationHeader-btn {
  height: 38px;
  width: 30px;
  text-align: center;
}

.conversationHeader-btn a {
  display: block;
  width: 100%;
  height: 100%;
}

.conversationHeader-btn a:before {
  line-height: 38px;
}

.conversationHeader-btn:hover {
  outline: solid 1px #4C4C4C;
  border-radius: 0;
}

.chatConversationContent {
  height: calc(100% - 138px);
  border: 1px solid #565656;
  border-top: 0;
  overflow: auto;
  padding: 6px 2px;
  margin-left: 2px;
  width: 222px;
}

.chatConversationTo {
  padding: 10px;
  border-bottom: 1px solid #333;
}

.chatConversationToLabel {
  width: 30px;
  float:left;
  height: 20px;
  line-height: 19px;
  color: #2D2D2D;
}

.chatConversationToInput {
  width: calc(100% - 50px);
  float: left;
}

#inputConversationRecipient {
  font-size: 12px;
  line-height: 19px;
}

.chatConversationMessage {
  height: 75px;
  padding: 0;
  border: 1px solid #565656;
  border-top: 0;
  margin-left: 2px;
}

.chatConversationMessageBody img,
.chatConversationMessageBody iframe {
  max-width: 145px;
  max-height: 145px;
}

.chatConversationMessage  .txtAreaField::-webkit-input-placeholder{
  font-size: 13px;
}

.chatConversationMessage  .txtAreaField {
  height: 75px;
  padding: 10px 10px;
}

.chatConversationMessage  .txtAreaField:focus {
    outline: 2px solid #565656;
}

.chatConversationMessage  .txtAreaField:after {
  margin-top: 5px;
}

.chatConversationAvatar {
    width: 45px;
    height: 45px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
    margin-right: 6px;
    margin-left: -10px;
}

.chatConversationAvatar:hover {
  -webkit-box-shadow: inset 0 0 15px 0 rgb(50, 50, 50);
}

.chatConversationMenu {
  width: 110px;
  border: solid 1px #565656;
  border-top: 0;
  padding: 10px;
  position: absolute;
  top: 45px;
  right: 0;
  background: #252525;
  z-index: 5;
  font-weight: 400;
  font-size: 12px;
}

.chatConversationMenu div {
  cursor: pointer;
  line-height: 22px;
}

.chatConversationMenu div:hover {
  text-decoration: underline;
}

.chatConversation textarea,
.chatConversation input {
  color: white;
  background-color: unset;
  width: 100%;
  font-size: 14px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.chatConversationMessageLine {
  padding: 4px 5px;
  width: 100%;
}

.chatConversationMessageLine h2,
.chatConversationMessageLine h3,
.chatConversationMessageLine p {
  margin: 0;
}

.chatConversationMessageLine table {
  padding: 0;
  width: 100%;
}

.chatHead {
  padding: 7px 5px;
  border-bottom: solid 1px rgba(255,255,255,0.08);
  transition: opacity .25s cubic-bezier(0, 0, 0.2, 1);
}

.chatHead .thumbnail {
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.20);
}

.chatHead:hover {
  opacity: 1;
}

.chatHeadSelected {
  opacity: 1;
  outline: solid 1px #FFFFFF;
  background: #565656;
  z-index:3;
}

/*.chatConversationHeadsCompressed .chatHead {
  border: solid 1px transparent;
}*/

#chatSearchField {
  height: 44px;
  float: left;
}

.chatHeadIcon {
  float:left;
}

.chatPreview {
  width: calc(100% - 60px);
  font-size: 11px;
  float:left;
  padding:0 5px;
  margin-top: 3px;
}

.chatPreviewSender {
  font-size:13px;
  font-weight:500;
  color: white;
  text-overflow: ellipsis;
  overflow: hidden;
  width: 100px;
  margin-left: 2px;
}

.chatPreviewLastMessage {
  overflow: hidden;
  text-overflow: ellipsis;
  width: 170px;
  white-space: nowrap;
  color: #fff;
  opacity: .75;
  font-size: 12px;
  margin-left: 2px;
}

.chatConversationMessageBody > .inner {
  background-color: #333333;
  border-radius: 3px;
  font-size: 12px;
  padding: 6px 8px;
  display: inline-block;
  font-weight: 500;
  letter-spacing: 0.2px;
}

#inputConversationMessage {
  border: 1px solid #333;
  resize: none;
  margin-top: 4px;
}

#inputConversationMessage::-webkit-input-placeholder  {
  font-size: 12px;
  color: #fff !important; /* i'm using important here because the custom theme styles should never override this color */
}

.chatConversationMessageAvatar {
  width: 25px;
  vertical-align: top;
}

.chatConversationMessageTimestamp {
  font-size: 11px;
  opacity: .35;
  font-weight: 500;
  letter-spacing: 0;
}

.chatConversationMessageTimestamp div {
  margin-top: 2px;
}
/* ... */

